@@ -278,7 +278,7 @@ public class FormulaFactory {
         List<String> formulas = group.getPillars().stream()
                 .filter(pillar -> pillar.getCategory().startsWith(PREFIX))
                 .map(pillar -> pillar.getCategory().substring(PREFIX.length()))
-                .collect(Collectors.toList());
+                .toList();
 
         return orderFormulas(formulas);
     }
@@ -292,7 +292,7 @@ public class FormulaFactory {
         List<String> formulas = orderFormulas(minion.getPillars().stream()
                 .filter(pillar -> pillar.getCategory().startsWith(PREFIX))
                 .map(pillar -> pillar.getCategory().substring(PREFIX.length()))
-                .collect(Collectors.toList()));
+                .toList());
 
         return orderFormulas(formulas);
     }
@@ -464,8 +464,8 @@ public class FormulaFactory {
      */
     public static Map<String, Object> convertIntegers(Map<String, Object> map) {
         map.forEach((key, value) -> {
-            if (value instanceof Double) {
-                if (((Double) value) % 1 == 0) {
+            if (value instanceof Double dbl) {
+                if (dbl % 1 == 0) {
                     map.put(key, ((Double) value).intValue());
                 }
             }
@@ -788,7 +788,7 @@ public class FormulaFactory {
                             proxyEnabled ? exporterConfig.getProxyModuleOrFallback() : null,
                             proxyPath,
                             tlsEnabled))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         else {
             return new ArrayList<>();
