@@ -324,12 +324,10 @@ public class ImageProfileController {
             p.setTargetStore(store);
             p.setToken(getToken(reqData.getActivationKey()));
 
-            if (p instanceof DockerfileProfile) {
-                DockerfileProfile dp = (DockerfileProfile) p;
+            if (p instanceof DockerfileProfile dp) {
                 dp.setPath(reqData.getPath());
             }
-            else if (p instanceof KiwiProfile) {
-                KiwiProfile kp = (KiwiProfile) p;
+            else if (p instanceof KiwiProfile kp) {
                 kp.setPath(reqData.getPath());
                 kp.setKiwiOptions(reqData.getKiwiOptions());
             }
@@ -432,7 +430,7 @@ public class ImageProfileController {
      */
     private static List<JsonObject> getJsonList(List<ImageProfile> profileList) {
         return profileList.stream().map(ImageProfileController::getJsonObject)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -462,7 +460,7 @@ public class ImageProfileController {
                 .findAllActive(user).stream()
                 .filter(ak -> ak.getBaseChannel() != null)
                 .map(ActivationKey::getKey)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
