@@ -26,7 +26,6 @@ import com.suse.manager.webui.utils.ViewHelper;
 import org.apache.commons.lang3.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PaygResponseMappers {
     private static LocalizationService ls = LocalizationService.getInstance();
@@ -50,7 +49,7 @@ public class PaygResponseMappers {
                     paygResponse.setLastChange(ViewHelper.formatDateTimeToISO(payg.getModified()));
                     return paygResponse;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
